# mobapp-backend

./: .env  .gitignore  .gitlab-ci.yml  README.md  docker-compose.override.yml  docker-compose.yml  docker-stack.yml
backend/app/: model.pkl  pyproject.toml  tests-start.sh
backend/app/app/: initial_data.py
backend/app/app/api/: deps.py
backend/app/app/core/: config.py
backend/app/app/crud/: __init__.py  crud_dublin_meta.py  crud_dublin_model.py  crud_dublin_model_detection_region.py  crud_dublin_model_eval.py  crud_dublin_model_points.py  crud_dublin_model_scores.py  crud_dublin_points.py  crud_dublin_prediction_region.py  dublin_points.py
backend/app/app/db/: base.py
backend/app/app/models/: __init__.py  dublin_meta.py  dublin_model.py  dublin_model_detection_region.py  dublin_model_eval.py  dublin_model_points.py  dublin_model_scores.py  dublin_points.py
backend/app/app/schemas/: __init__.py  dublin_meta.py  dublin_model.py  dublin_model_detection_region.py  dublin_model_eval.py  dublin_model_points.py  (+2 more)
backend/app/data/: recife_amostra.csv
backend/app/notebooks/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled4.ipynb  csv_c_score-REGION-iboat.ipynb  csv_c_score-REGION-transformer.ipynb  csv_c_score-gmvsae.ipynb  csv_c_score-iboat.ipynb  csv_c_score-transformer.ipynb  csv_c_score.ipynb  dublin_data_v2.ipynb  dublin_model_points.ipynb  dublin_results.ipynb  init_dev_env.ipynb  map_matching_test.ipynb  movPandas.ipynb  new_databases.ipynb  novos_CSVs.ipynb  receive_predictions.ipynb  testes.ipynb  xxx.ipynb
backend/app/scripts/: test.sh
(+47 files in other folders)
